--- a/network.yml
+++ b/network.yml
@@ -14,7 +14,7 @@ services:
 
   tracker:
     container_name: tracker
-    image: a852203465/fastdfs
+    image: registry.cn-shenzhen.aliyuncs.com/a852203465/fastdfs:1.0
     command: tracker
     ports:
       - 22122:22122
@@ -25,7 +25,7 @@ services:
 
   storage0:
     container_name: storage0
-    image: a852203465/fastdfs
+    image: registry.cn-shenzhen.aliyuncs.com/a852203465/fastdfs:1.0
     command: storage
     expose:
       - 8080
@@ -45,7 +45,7 @@ services:
 
   storage1:
     container_name: storage1
-    image: a852203465/fastdfs
+    image: registry.cn-shenzhen.aliyuncs.com/a852203465/fastdfs:1.0
     command: storage
     expose:
       - 8080
