--- a/host-stand-alone.yml
+++ b/host-stand-alone.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   tracker:
     container_name: tracker
-    image: a852203465/fastdfs
+    image: registry.cn-shenzhen.aliyuncs.com/a852203465/fastdfs:1.0
     command: tracker
     network_mode: host
     environment:
@@ -11,7 +11,7 @@ services:
       - ./fdfs/tracker:/var/fdfs
   storage0:
     container_name: storage0
-    image: a852203465/fastdfs
+    image: registry.cn-shenzhen.aliyuncs.com/a852203465/fastdfs:1.0
     command: storage
     network_mode: host
     environment:
